5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/225/users/4008/executions/1756_1576.log
== TEST (2019-05-22 14:40:28) 
-- CODE:
from numpy import*
v1 = array(eval(int(input("n: "))))
v2 = array(eval(int(input("n: "))))

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-22 14:40:51) 
-- CODE:
from numpy import*
v1 = array(eval(input("n: ")))
v2 = array(eval(input("n: ")))

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-22 14:41:53) 
-- CODE:
from numpy import*
v1 = array(eval(int(input("n: ")))
v2 = array(eval(int(input("n: ")))

-- ERROR:
File "XXXX", line 3
    v2 = array(eval(int(input()))
     ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-22 14:41:53) 
-- CODE:
from numpy import*
v1 = array(eval(int(input("n: ")))
v2 = array(eval(int(input("n: ")))

-- ERROR:
File "XXXX", line 3
    v2 = array(eval(int(input()))
     ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-22 14:41:53) 
-- CODE:
from numpy import*
v1 = array(eval(int(input("n: ")))
v2 = array(eval(int(input("n: ")))

-- ERROR:
File "XXXX", line 3
    v2 = array(eval(int(input()))
     ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-22 14:41:58) 
-- CODE:
from numpy import*
v1 = array(eval(int(input("n: ")))
v2 = array(eval(int(input("n: ")))

-- ERROR:
File "XXXX", line 3
    v2 = array(eval(int(input()))
     ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-22 14:42:13) 
-- CODE:
from numpy import*
v1 = array(eval(int(input("n: "))))
v2 = array(eval(int(input("n: "))))

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-22 14:45:43) 
-- CODE:
from numpy import*
v1 = array(eval(int(input("n: "))))
v2 = array(eval(int(input("n1: "))))
while(x == 11 and x == 22 and x == 33):
	

-- ERROR:
File "XXXX", line 6
    
     ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-22 15:37:18) 
-- CODE:
from numpy import*
v1 = array(eval(int(input("n: "))))
v2 = array(eval(int(input("n1: "))))
pedra == 11
papel == 22
tesoura == 33
c = 0
ve = 0
vb = 0

while(c<size(v1)):
	if(v1[c] == pedra and v2[c] == papel):
		vb = vb + 1
	elif(v1[c] == pedra and v2[c] == tesoura):
		ve = ve + 1
	elif(v1[c] == papel and v2[c] == tesoura):
		vb = vb + 1
	elif(v1[c] == papel and v2[c] == pedra):
		ve = ve + 1
	elif(v1[c] == tesoura and v2[c] == papel):
		ve = ve + 1
	elif(v1[c] == tesoura and v2[c] == pedra):
		vb = vb + 1		
print(size(v1))
if(ve>vb):
	print("EUSAPIA")
elif(vb>ve):
	print("BARSANULFO")
else:
	print("EMPATE")
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-22 15:38:16) 
-- CODE:
from numpy import*
v1 = array(eval(input("n: ")))
v2 = array(eval(input("n: ")))
pedra == 11
papel == 22
tesoura == 33
c = 0
ve = 0
vb = 0

while(c<size(v1)):
	if(v1[c] == pedra and v2[c] == papel):
		vb = vb + 1
	elif(v1[c] == pedra and v2[c] == tesoura):
		ve = ve + 1
	elif(v1[c] == papel and v2[c] == tesoura):
		vb = vb + 1
	elif(v1[c] == papel and v2[c] == pedra):
		ve = ve + 1
	elif(v1[c] == tesoura and v2[c] == papel):
		ve = ve + 1
	elif(v1[c] == tesoura and v2[c] == pedra):
		vb = vb + 1		
print(size(v1))
if(ve>vb):
	print("EUSAPIA")
elif(vb>ve):
	print("BARSANULFO")
else:
	print("EMPATE")
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-22 15:39:04) 
-- CODE:
from numpy import*
v1 = array(eval(input("n: ")))
v2 = array(eval(input("n: ")))
pedra == 11
papel == 22
tesoura == 33
c = 0
ve = 0
vb = 0

while(c<size(v1)):
	if(v1[c] == pedra and v2[c] == papel):
		vb = vb + 1
	elif(v1[c] == pedra and v2[c] == tesoura):
		ve = ve + 1
	elif(v1[c] == papel and v2[c] == tesoura):
		vb = vb + 1
	elif(v1[c] == papel and v2[c] == pedra):
		ve = ve + 1
	elif(v1[c] == tesoura and v2[c] == papel):
		ve = ve + 1
	elif(v1[c] == tesoura and v2[c] == pedra):
		vb = vb + 1		
print(size(v1))
if(ve>vb):
	print("EUSAPIA")
elif(vb>ve):
	print("BARSANULFO")
else:
	print("EMPATE")
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-22 15:39:25) 
-- CODE:
from numpy import*
v1 = array(eval(input("n: ")))
v2 = array(eval(input("n: ")))
pedra == 11
papel == 22
tesoura == 33
c = 0
ve = 0
vb = 0

while(c<size(v1)):
	if(v1[c] == pedra and v2[c] == papel):
		vb = vb + 1
	elif(v1[c] == pedra and v2[c] == tesoura):
		ve = ve + 1
	elif(v1[c] == papel and v2[c] == tesoura):
		vb = vb + 1
	elif(v1[c] == papel and v2[c] == pedra):
		ve = ve + 1
	elif(v1[c] == tesoura and v2[c] == papel):
		ve = ve + 1
	elif(v1[c] == tesoura and v2[c] == pedra):
		vb = vb + 1		
print(size(v1))
if(ve>vb):
	print("EUSAPIA")
elif(vb>ve):
	print("BARSANULFO")
else:
	print("EMPATE")
-- EXECUTION TIME:
0.295435
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1756/1576/main.py", line 4, in <module>
    pedra == 11
NameError: name 'pedra' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-22 15:39:46) 
-- CODE:
from numpy import*
v1 = array(eval(input("n: ")))
v2 = array(eval(input("n: ")))
pedra = 11
papel = 22
tesoura = 33
c = 0
ve = 0
vb = 0

while(c<size(v1)):
	if(v1[c] == pedra and v2[c] == papel):
		vb = vb + 1
	elif(v1[c] == pedra and v2[c] == tesoura):
		ve = ve + 1
	elif(v1[c] == papel and v2[c] == tesoura):
		vb = vb + 1
	elif(v1[c] == papel and v2[c] == pedra):
		ve = ve + 1
	elif(v1[c] == tesoura and v2[c] == papel):
		ve = ve + 1
	elif(v1[c] == tesoura and v2[c] == pedra):
		vb = vb + 1		
print(size(v1))
if(ve>vb):
	print("EUSAPIA")
elif(vb>ve):
	print("BARSANULFO")
else:
	print("EMPATE")
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-22 15:40:10) 
-- CODE:
from numpy import*
v1 = array(eval(input("n: ")))
v2 = array(eval(input("n: ")))
pedra = 11
papel = 22
tesoura = 33
c = 0
ve = 0
vb = 0

while(c<size(v1)):
	if(v1[c] == pedra and v2[c] == papel):
		vb = vb + 1
	elif(v1[c] == pedra and v2[c] == tesoura):
		ve = ve + 1
	elif(v1[c] == papel and v2[c] == tesoura):
		vb = vb + 1
	elif(v1[c] == papel and v2[c] == pedra):
		ve = ve + 1
	elif(v1[c] == tesoura and v2[c] == papel):
		ve = ve + 1
	elif(v1[c] == tesoura and v2[c] == pedra):
		vb = vb + 1		
print(size(v1))
if(ve>vb):
	print("EUSAPIA")
elif(vb>ve):
	print("BARSANULFO")
else:
	print("EMPATE")
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-22 15:40:21) 
-- CODE:
from numpy import*
v1 = array(eval(input("n: ")))
v2 = array(eval(input("n: ")))
pedra = 11
papel = 22
tesoura = 33
c = 0
ve = 0
vb = 0

while(c<size(v1)):
	if(v1[c] == pedra and v2[c] == papel):
		vb = vb + 1
	elif(v1[c] == pedra and v2[c] == tesoura):
		ve = ve + 1
	elif(v1[c] == papel and v2[c] == tesoura):
		vb = vb + 1
	elif(v1[c] == papel and v2[c] == pedra):
		ve = ve + 1
	elif(v1[c] == tesoura and v2[c] == papel):
		ve = ve + 1
	elif(v1[c] == tesoura and v2[c] == pedra):
		vb = vb + 1		
print(size(v1))
if(ve>vb):
	print("EUSAPIA")
elif(vb>ve):
	print("BARSANULFO")
else:
	print("EMPATE")
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-22 15:40:28) 
-- CODE:
from numpy import*
v1 = array(eval(input("n: ")))
v2 = array(eval(input("n: ")))
pedra = 11
papel = 22
tesoura = 33
c = 0
ve = 0
vb = 0

while(c<size(v1)):
	if(v1[c] == pedra and v2[c] == papel):
		vb = vb + 1
	elif(v1[c] == pedra and v2[c] == tesoura):
		ve = ve + 1
	elif(v1[c] == papel and v2[c] == tesoura):
		vb = vb + 1
	elif(v1[c] == papel and v2[c] == pedra):
		ve = ve + 1
	elif(v1[c] == tesoura and v2[c] == papel):
		ve = ve + 1
	elif(v1[c] == tesoura and v2[c] == pedra):
		vb = vb + 1		
print(size(v1))
if(ve>vb):
	print("EUSAPIA")
elif(vb>ve):
	print("BARSANULFO")
else:
	print("EMPATE")
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-22 15:42:39) 
-- CODE:
from numpy import*
v1 = array(eval(input("n: ")))
v2 = array(eval(input("n: ")))
pedra = 11
papel = 22
tesoura = 33
c = 0
ve = 0
vb = 0

while(c<size(v1)):
	if(v1[c] == pedra and v2[c] == papel):
		vb = vb + 1
	elif(v1[c] == pedra and v2[c] == tesoura):
		ve = ve + 1
	elif(v1[c] == papel and v2[c] == tesoura):
		vb = vb + 1
	elif(v1[c] == papel and v2[c] == pedra):
		ve = ve + 1
	elif(v1[c] == tesoura and v2[c] == papel):
		ve = ve + 1
	elif(v1[c] == tesoura and v2[c] == pedra):
		vb = vb + 1		
	c = c + 1
print(size(v1))
if(ve>vb):
	print("EUSAPIA")
elif(vb>ve):
	print("BARSANULFO")
else:
	print("EMPATE")
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-22 15:42:50) 
-- CODE:
from numpy import*
v1 = array(eval(input("n: ")))
v2 = array(eval(input("n: ")))
pedra = 11
papel = 22
tesoura = 33
c = 0
ve = 0
vb = 0

while(c<size(v1)):
	if(v1[c] == pedra and v2[c] == papel):
		vb = vb + 1
	elif(v1[c] == pedra and v2[c] == tesoura):
		ve = ve + 1
	elif(v1[c] == papel and v2[c] == tesoura):
		vb = vb + 1
	elif(v1[c] == papel and v2[c] == pedra):
		ve = ve + 1
	elif(v1[c] == tesoura and v2[c] == papel):
		ve = ve + 1
	elif(v1[c] == tesoura and v2[c] == pedra):
		vb = vb + 1		
	c = c + 1
print(size(v1))
if(ve>vb):
	print("EUSAPIA")
elif(vb>ve):
	print("BARSANULFO")
else:
	print("EMPATE")
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-22 15:42:54) 
-- CODE:
from numpy import*
v1 = array(eval(input("n: ")))
v2 = array(eval(input("n: ")))
pedra = 11
papel = 22
tesoura = 33
c = 0
ve = 0
vb = 0

while(c<size(v1)):
	if(v1[c] == pedra and v2[c] == papel):
		vb = vb + 1
	elif(v1[c] == pedra and v2[c] == tesoura):
		ve = ve + 1
	elif(v1[c] == papel and v2[c] == tesoura):
		vb = vb + 1
	elif(v1[c] == papel and v2[c] == pedra):
		ve = ve + 1
	elif(v1[c] == tesoura and v2[c] == papel):
		ve = ve + 1
	elif(v1[c] == tesoura and v2[c] == pedra):
		vb = vb + 1		
	c = c + 1
print(size(v1))
if(ve>vb):
	print("EUSAPIA")
elif(vb>ve):
	print("BARSANULFO")
else:
	print("EMPATE")
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-22 15:43:02) 
-- CODE:
from numpy import*
v1 = array(eval(input("n: ")))
v2 = array(eval(input("n: ")))
pedra = 11
papel = 22
tesoura = 33
c = 0
ve = 0
vb = 0

while(c<size(v1)):
	if(v1[c] == pedra and v2[c] == papel):
		vb = vb + 1
	elif(v1[c] == pedra and v2[c] == tesoura):
		ve = ve + 1
	elif(v1[c] == papel and v2[c] == tesoura):
		vb = vb + 1
	elif(v1[c] == papel and v2[c] == pedra):
		ve = ve + 1
	elif(v1[c] == tesoura and v2[c] == papel):
		ve = ve + 1
	elif(v1[c] == tesoura and v2[c] == pedra):
		vb = vb + 1		
	c = c + 1
print(size(v1))
if(ve>vb):
	print("EUSAPIA")
elif(vb>ve):
	print("BARSANULFO")
else:
	print("EMPATE")
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-22 15:43:08) 
-- CODE:
from numpy import*
v1 = array(eval(input("n: ")))
v2 = array(eval(input("n: ")))
pedra = 11
papel = 22
tesoura = 33
c = 0
ve = 0
vb = 0

while(c<size(v1)):
	if(v1[c] == pedra and v2[c] == papel):
		vb = vb + 1
	elif(v1[c] == pedra and v2[c] == tesoura):
		ve = ve + 1
	elif(v1[c] == papel and v2[c] == tesoura):
		vb = vb + 1
	elif(v1[c] == papel and v2[c] == pedra):
		ve = ve + 1
	elif(v1[c] == tesoura and v2[c] == papel):
		ve = ve + 1
	elif(v1[c] == tesoura and v2[c] == pedra):
		vb = vb + 1		
	c = c + 1
print(size(v1))
if(ve>vb):
	print("EUSAPIA")
elif(vb>ve):
	print("BARSANULFO")
else:
	print("EMPATE")
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-22 15:43:39) 
-- CODE:
from numpy import*
v1 = array(eval(input("n: ")))
v2 = array(eval(input("n: ")))
pedra = 11
papel = 22
tesoura = 33
c = 0
ve = 0
vb = 0

while(c<size(v1)):
	if(v1[c] == pedra and v2[c] == papel):
		vb = vb + 1
	elif(v1[c] == pedra and v2[c] == tesoura):
		ve = ve + 1
	elif(v1[c] == papel and v2[c] == tesoura):
		vb = vb + 1
	elif(v1[c] == papel and v2[c] == pedra):
		ve = ve + 1
	elif(v1[c] == tesoura and v2[c] == papel):
		ve = ve + 1
	elif(v1[c] == tesoura and v2[c] == pedra):
		vb = vb + 1		
	c = c + 1
print(size(v1))
if(ve>vb):
	print("EUSAPIA")
elif(vb>ve):
	print("BARSANULFO")
else:
	print("EMPATE")
-- EXECUTION TIME:
1.9891
-- TEST CASE 1:
---- input:
[33,22,33,22,11,11,33,22,11,11,22,33]
[22,33,22,11,11,33,22,11,11,22,33,33]
---- correct output:
12
EUSAPIA
---- user output:
12
EUSAPIA
-- TEST CASE 2:
---- input:
[33,22,33,11,33,22,11,22,33,11]
[11,33,22,33,11,33,22,11,22,33]
---- correct output:
10
EMPATE
---- user output:
10
EMPATE
-- TEST CASE 3:
---- input:
[33,33,22,11,11,22,33,33,22,11,11,22,33,33,22,11,11,22]
[11,33,33,22,11,11,22,33,33,22,11,11,22,33,33,22,11,11]
---- correct output:
18
BARSANULFO
---- user output:
18
BARSANULFO
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-22 15:53:04) 
-- CODE:
from numpy import*
v1 = array(eval(input("n: ")))
v2 = array(eval(input("n: ")))
pedra = 11
papel = 22
tesoura = 33
c = 0
ve = 0
vb = 0

while(c<size(v1)):
	if(v1[c] == pedra and v2[c] == papel):
		vb = vb + 1
	elif(v1[c] == pedra and v2[c] == tesoura):
		ve = ve + 1
	elif(v1[c] == papel and v2[c] == tesoura):
		vb = vb + 1
	elif(v1[c] == papel and v2[c] == pedra):
		ve = ve + 1
	elif(v1[c] == tesoura and v2[c] == papel):
		ve = ve + 1
	elif(v1[c] == tesoura and v2[c] == pedra):
		vb = vb + 1		
print(size(v1))
if(ve>vb):
	print("EUSAPIA")
elif(vb>ve):
	print("BARSANULFO")
else:
	print("EMPATE")
-- EXECUTION TIME:
777.771
-- ERROR:
Killed

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-22 15:54:02) 
-- CODE:
from numpy import*
v1 = array(eval(input("n: ")))
v2 = array(eval(input("n: ")))
pedra = 11
papel = 22
tesoura = 33
c = 0
ve = 0
vb = 0

while(c<size(v1)):
	if(v1[c] == pedra and v2[c] == papel):
		vb = vb + 1
	elif(v1[c] == pedra and v2[c] == tesoura):
		ve = ve + 1
	elif(v1[c] == papel and v2[c] == tesoura):
		vb = vb + 1
	elif(v1[c] == papel and v2[c] == pedra):
		ve = ve + 1
	elif(v1[c] == tesoura and v2[c] == papel):
		ve = ve + 1
	elif(v1[c] == tesoura and v2[c] == pedra):
		vb = vb + 1		
print(size(v1))
if(ve>vb):
	print("EUSAPIA")
elif(vb>ve):
	print("BARSANULFO")
else:
	print("EMPATE")
-- EXECUTION TIME:
821.526
-- ERROR:
Killed

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-22 15:54:44) 
-- CODE:
from numpy import*
v1 = array(eval(input("n: ")))
v2 = array(eval(input("n: ")))
pedra = 11
papel = 22
tesoura = 33
c = 0
ve = 0
vb = 0

while(c<size(v1)):
	if(v1[c] == pedra and v2[c] == papel):
		vb = vb + 1
	elif(v1[c] == pedra and v2[c] == tesoura):
		ve = ve + 1
	elif(v1[c] == papel and v2[c] == tesoura):
		vb = vb + 1
	elif(v1[c] == papel and v2[c] == pedra):
		ve = ve + 1
	elif(v1[c] == tesoura and v2[c] == papel):
		ve = ve + 1
	elif(v1[c] == tesoura and v2[c] == pedra):
		vb = vb + 1		
	c = c + 1
print(size(v1))
if(ve>vb):
	print("EUSAPIA")
elif(vb>ve):
	print("BARSANULFO")
else:
	print("EMPATE")
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-22 15:55:05) 
-- CODE:
from numpy import*
v1 = array(eval(input("n: ")))
v2 = array(eval(input("n: ")))
pedra = 11
papel = 22
tesoura = 33
c = 0
ve = 0
vb = 0

while(c<size(v1)):
	if(v1[c] == pedra and v2[c] == papel):
		vb = vb + 1
	elif(v1[c] == pedra and v2[c] == tesoura):
		ve = ve + 1
	elif(v1[c] == papel and v2[c] == tesoura):
		vb = vb + 1
	elif(v1[c] == papel and v2[c] == pedra):
		ve = ve + 1
	elif(v1[c] == tesoura and v2[c] == papel):
		ve = ve + 1
	elif(v1[c] == tesoura and v2[c] == pedra):
		vb = vb + 1		
	c = c + 1
print(size(v1))
if(ve>vb):
	print("EUSAPIA")
elif(vb>ve):
	print("BARSANULFO")
else:
	print("EMPATE")
-- EXECUTION TIME:
0.529909
-- TEST CASE 1:
---- input:
[33,22,33,22,11,11,33,22,11,11,22,33]
[22,33,22,11,11,33,22,11,11,22,33,33]
---- correct output:
12
EUSAPIA
---- user output:
12
EUSAPIA
-- TEST CASE 2:
---- input:
[33,22,33,11,33,22,11,22,33,11]
[11,33,22,33,11,33,22,11,22,33]
---- correct output:
10
EMPATE
---- user output:
10
EMPATE
-- TEST CASE 3:
---- input:
[33,33,22,11,11,22,33,33,22,11,11,22,33,33,22,11,11,22]
[11,33,33,22,11,11,22,33,33,22,11,11,22,33,33,22,11,11]
---- correct output:
18
BARSANULFO
---- user output:
18
BARSANULFO
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
